--- a/new1.html
+++ b/new1.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Du an 3</title>
+    <title>Thu muc phu</title>
 </head>
 <body>
-    <h1> Toi la Dec</h1>
-    <h2>Sua doi lan 1</h2>
-    <h2>Sua doi lan 2</h2>
+    <h1>Noi dung moi</h1>
 </body>
 </html>
